...
            return chanSnapShot.connectionState == ConnectionState.waiting
                ? const Center(child: CircularProgressIndicator())
                : Stack(
                    children: [
                      const TabBarView(
                        children: [
                          ChannelsList(false), //כל התחנות
                          ChannelsList(true), //מעודפים
                        ],
                      ),
                      Container(
                          alignment: Alignment.bottomCenter,
                          child: chanSnapShot.connectionState ==
                                  ConnectionState.waiting
...
