...
            const Divider(thickness: 2),
            Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                TextButton(
                  child: const Text(
                    'סגור',
                  ),
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                ),
              ],
...
